# mel.net

./: .gitignore  .gitmodules  README.md  convert.py  out.f32  test.f32
libmel/: CMakeLists.txt  common.h  libmel.cpp  libmel.h  libmel.sln  mel.c.cpp  mel.c.h  melFeatureExtractor.cpp  melFeatureExtractor.h  utils.cpp  utils.h  windows_entrypoint.c
mel.net/: CMakeLists.txt  mel.net.sln
mel.net/mel.net.bindings/: MelFeatureExtractor.cs  NativeLibMelInterop.cs  NormalizeType.cs
